version/0.17/_sources/api/solver/_autosummary/settings/pressure_inlet.rst.txt
:orphan:

.. _pressure_inlet:

pressure_inlet
==============

.. autoclass:: ansys.fluent.core.solver.settings_232.pressure_inlet.pressure_inlet
    :show-inheritance:

.. rubric:: Methods

========================================   ==============================

Method                                                            Summary

========================================   ==============================
:ref:`list <list>`                                        'list' command.

:ref:`list_properties <list_properties>`       'list_properties' command.

:ref:`duplicate <duplicate>`                         'duplicate' command.

========================================   ==============================

.. rubric:: Named object type

:ref:`pressure_inlet_child <pressure_inlet_child>`


.. rubric:: Included in:

================================================   ================================

Parent                                                                      Summary

================================================   ================================
:ref:`boundary_conditions <boundary_conditions>`       'boundary_conditions' child.

================================================   ================================

